* LUA scripting
* user interface
  - screen layout with 12 infoboxes on the left, vario+3 infoboxes on right
* data files
  - optimise the terrain loader
* devices
  - driver for XC Tracer Vario
  - driver for KRT2 radio
* weather
  - merge all weather data in one dialog
  - allow showing both terrain and RASP
  - show satellite images from pc_met (Deutscher Wetterdienst)
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 CPUs
* Kobo
  - support Kobo Glo HD

Version 6.8.3 - not yet released
* map
  - fix distorted terrain when zoomed out
* calculations
  - update SIS-AT to 2016 scoring rules
* data files
  - use correct "comment" field for OziExplorer files
  - relax file format detection for OziExplorer files
  - fix bogus arrival heights on watched waypoints when GPS unavailable
  - fix crash in airspace parser
  - fix crash in XML parser
* devices
  - GTAltimeter: remove unmaintained driver (#3661)
* Kobo
  - support Kobo Glo HD, Kobo Touch 2.0
* fix crash in SkyLines tracking

Version 6.8.2 - 2015/09/19
* Rubik R-26S polar
* user interface
  - save settings after copy&pasting an InfoBox set (#3649)
* map
  - fix crash in the topography renderer
* calculations
  - fix task progress display after finish achieved (#3657)
* devices
  - fix wrong baud rate after task declaration (#3654)
* Android
  - support the "escape" key (#3647)
  - fix all RS232 permissions on Android (#3648)
* Kobo
  - fix wrong IP address display (#3650)
* Raspberry Pi / Cubieboard
  - support digit and letter keys (#3611)

Version 6.8.1 - 2015/08/27
* fix freeze bug when starting without GPS fix
* fix crash with empty xcsoar-checklist.txt file
* devices
  - fix TCP port on Windows (#3428)
* Windows
  - fix the airspace file parser (#3633)
* Kobo
  - fix overlapping text (#3634)
* Android